tests/__snapshots__/api-toBeVoid.test.js.snap
// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`toBeVoid: stderr 1`] = `
"Error: Type 'void' is not identical to type 'string'.

   7 |   expect(returnsVoid()).type.toBeVoid();
   8 | 
>  9 |   expect(returnsString()).type.toBeVoid();
     |                                ^
  10 | });
  11 | 
  12 | test("is NOT void?", () => {

       at ./__typetests__/toBeVoid.tst.ts:9:32 ❭ is void?

Error: Type 'void' is identical to type 'void'.

  13 |   expect(returnsString()).type.not.toBeVoid();
  14 | 
> 15 |   expect(returnsVoid()).type.not.toBeVoid();
     |                                  ^
  16 | });
  17 | 

       at ./__typetests__/toBeVoid.tst.ts:15:34 ❭ is NOT void?

"
`;

exports[`toBeVoid: stdout 1`] = `
"uses TypeScript <<version>> with ./tsconfig.json

fail ./__typetests__/toBeVoid.tst.ts
  × is void?
  × is NOT void?

Targets:    1 failed, 1 total
Test files: 1 failed, 1 total
Tests:      2 failed, 2 total
Assertions: 2 failed, 2 passed, 4 total
Duration:   <<timestamp>>

Ran all test files.
"
`;
